k8s/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: chat
  template:
    metadata:
      labels:
        component: chat
    spec:
      containers:
        - name: chat
          image: pumajosleaa/chat
          ports:
            - containerPort: 8000
