k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: notification
  template:
    metadata:
      labels:
        component: notification
    spec:
      containers:
        - name: notification
          image: pumajosleaa/notification
          ports:
            - containerPort: 5000
