k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 4000
      targetPort: 4000
