k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: ClusterIP
  selector:
    component: chat
  ports:
    - port: 8000
      targetPort: 8000
