k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    component: notification
  ports:
    - port: 5000
      targetPort: 5000
