k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 4000
          - path: /socket/?(.*)
            backend:
              serviceName: notification-service
              servicePort: 5000
          - path: /graph/?(.*)
            backend:
              serviceName: chat-service
              servicePort: 8000
